--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
